--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -3,8 +3,8 @@ $color-background = #222
 $color-background-d = rgba(0, 0, 0, 0.3)
 $color-highlight-background = #333
 $color-dialog-background = #666
-$color-theme = #ffcd32
-$color-theme-d = rgba(255, 205, 49, 0.5)
+$color-theme = #f8f8ff
+$color-theme-d = rgba(248, 248, 255, 0.5)
 $color-sub-theme = #d93f30
 $color-text = #fff
 $color-text-d = rgba(255, 255, 255, 0.3)
