finished the demo, and commit in 2018-7-25

--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -10,6 +10,18 @@ $color-text = #fff
 $color-text-d = rgba(255, 255, 255, 0.3)
 $color-text-l = rgba(255, 255, 255, 0.5)
 $color-text-ll = rgba(255, 255, 255, 0.8)
+// 颜色定义规范
+// $color-background = #b5f2e8
+// $color-background-d = rgba(220, 220, 220, 0.5)
+// $color-highlight-background = #fff
+// $color-dialog-background = #999
+// $color-theme = #000
+// $color-theme-d = rgba(0, 0, 0, 0.5)
+// $color-sub-theme = #d93f30
+// $color-text = #000
+// $color-text-d = rgba(0, 0, 0, 0.5)
+// $color-text-l = rgba(0, 0, 0, 0.8)
+// $color-text-ll = rgba(0, 0, 0, 0.8)
 
 //字体定义规范
 $font-size-small-s = 10px
